<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartAWalkActivity">

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="86dp"
        android:text="Enter a new walk"
        android:textColor="#009688"
        android:textSize="35dp"
        app:layout_anchorGravity="end|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/teammate_mail"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inches2" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feet2" />

    <TextView
        android:id="@+id/feet2"
        android:layout_width="214dp"
        android:layout_height="43dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:ems="3"
        android:text="Starting Location:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/heightInfo2"
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:text="Please enter the name and starting position of this walk. Click Save to store this information."
        android:textAlignment="center"
        android:textColor="#656368"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <TextView
        android:id="@+id/inches2"
        android:layout_width="156dp"
        android:layout_height="39dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="10dp"
        android:ems="3"
        android:text="Walk Name:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightInfo2" />

    <Button
        android:id="@+id/save"
        android:layout_width="118dp"
        android:layout_height="61dp"
        android:layout_marginBottom="36dp"
        android:text="SAVE"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>