<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="226dp"
        android:layout_height="278dp"
        android:layout_margin="20dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:background="#06B1B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="301dp"
        android:layout_height="128dp"
        android:layout_margin="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:background="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/routesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:text="Today's Total"
        android:textColor="#009688"
        android:textSize="40dp"
        app:layout_anchorGravity="end|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/routesButton"
        android:layout_width="115dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="44dp"
        android:text="Routes"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startRouteButton" />

    <Button
        android:id="@+id/startRouteButton"
        android:layout_width="104dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="44dp"
        android:text="Start a \n new Walk"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/TeamButton"
        android:layout_width="104dp"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:text="Team"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startRouteButton" />

    <TextView
        android:id="@+id/dailySteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="85dp"
        android:text="Daily Steps"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="85dp"
        android:text="Mileage"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dailyStepsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="85dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dailyStepsUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="85dp"
        android:text="Steps"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mileageValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="85dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mileageUnit"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="85dp"
        android:text="Miles"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastWalkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:text="Last Intentional Walk"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/img2"
        app:layout_constraintTop_toTopOf="@+id/img2" />

    <TextView
        android:id="@+id/LastWalkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:text="No Walk Today!"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/img2"
        app:layout_constraintTop_toBottomOf="@+id/lastWalkTitle" />

    <TextView
        android:id="@+id/lastWalkStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintStart_toEndOf="@+id/lastWalkTitle"
        app:layout_constraintTop_toBottomOf="@+id/from" />

    <TextView
        android:id="@+id/LWsteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="12dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toStartOf="@+id/steps" />

    <TextView
        android:id="@+id/LWmiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="12dp"
        android:text="0.0"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toStartOf="@+id/miles" />

    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="12dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toStartOf="@+id/hourUnit" />

    <TextView
        android:id="@+id/sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="12dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toStartOf="@+id/secUnit" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="12dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toStartOf="@+id/minUnit" />

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="from"
        android:textColor="#FFFFFF"
        android:textSize="8dp"
        app:layout_constraintStart_toEndOf="@+id/lastWalkTitle"
        app:layout_constraintTop_toBottomOf="@+id/lastWalkTitle" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="12dp"
        android:text="steps"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toStartOf="@+id/lastWalkStart" />

    <TextView
        android:id="@+id/miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:text="miles"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toStartOf="@+id/lastWalkStart" />

    <TextView
        android:id="@+id/hourUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="15dp"
        android:text="h."
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toEndOf="@+id/img2" />

    <TextView
        android:id="@+id/minUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="15dp"
        android:text="m."
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toEndOf="@+id/img2" />

    <TextView
        android:id="@+id/secUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:text="s."
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toEndOf="@+id/img2" />

    <Switch
        android:id="@+id/debugMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="7dp"
        android:text="debug"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintStart_toStartOf="@+id/img" />

    <Button
        android:id="@+id/AddStep_debug"
        android:layout_width="57dp"
        android:layout_height="56dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:text="+ 500 Steps"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintEnd_toEndOf="@+id/img" />

    <Button
        android:id="@+id/ClearDataBase_debug"
        android:layout_width="57dp"
        android:layout_height="56dp"
        android:layout_marginEnd="7dp"
        android:text="Clear Data"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/AddStep_debug"
        app:layout_constraintEnd_toEndOf="@+id/img" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/invitation_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:fabCustomSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.constraintlayout.widget.ConstraintLayout>