<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/route_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="#03244D"
        app:layout_constraintTop_toTopOf="parent"></ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addRouteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#00BCD4"
        android:elevation="0dp"
        android:foregroundTint="#035E52"
        android:tint="@android:color/white"
        app:backgroundTint="#035E52"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/route_list"
        app:layout_constraintEnd_toEndOf="@+id/route_list"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:rippleColor="#035E52"
        app:srcCompat="@android:drawable/ic_input_add" />
</RelativeLayout>